# RoboColumbus2025

./: README.md
src/robocolumbus25_stuff/: package.xml  robocolumbus25_wheel_controler_node.py  roborama25_controller_node_lc.py  roborama25_front_sensors_node_lc.py  roborama25_lifecycle_node_manager.py  setup.cfg  setup.py
src/robocolumbus25_stuff/launch/: roborama25_lc_nav2_bringup_launch.py
urdfs/: roborama25.urdf
