<?xml version="1.0"?>
<package format="3">
  <name>robocolumbus25_stuff</name>
  <version>0.0.1</version>
  <description>Robocolumbus 1/6 scale jeep wheel controller</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pyserial</exec_depend>
</package>